--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "3"
-  }
+  },
+  "@babel/core": "^7.15.0",
+  "babel-loader": "^8.2.2"
 }
