--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "3"
+    "webpack-dev-server": "^4.15.1"
   },
   "@babel/core": "^7.15.0",
   "babel-loader": "^8.2.2"
